--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
       mensagem.textContent = "Verificando...";
 
       try {
-        const resposta = await fetch("https://script.google.com/macros/s/AKfycbyoidlqOsQwjMJo8TYh-qippPo6CzW8dZyqJQKEZ2sOk1PtLmZSBHOfBKoZ9YzPmHEy0w/exec" + encodeURIComponent(senha));
+    const resposta = await fetch("https://script.google.com/macros/s/AKfycbyoidlqOsQwjMJo8TYh-qippPo6CzW8dZyqJQKEZ2sOk1PtLmZSBHOfBKoZ9YzPmHEy0w/exec?usuario=leonardo&senha=" + encodeURIComponent(senha));
+
         const dados = await resposta.json();
 
         if (dados.autorizado) {
