--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
       mensagem.textContent = "Verificando...";
 
       try {
-    const resposta = await fetch("https://script.google.com/macros/s/AKfycbzSVlv5Ju8zHfUaJpPQjgWcaBwckb_OmKpXuVMh32Q8DvZ27KXZ1ncAGi1aVrF6soywRg/exec?usuario=leonardo&senha=" + encodeURIComponent(senha));
+      const resposta = await fetch("https://script.google.com/macros/s/AKfycbzSVlv5Ju8zHfUaJpPQjgWcaBwckb_OmKpXuVMh32Q8DvZ27KXZ1ncAGi1aVrF6soywRg/exec?usuario=Leonardo%20Henrique&senha=" + encodeURIComponent(senha));
+
 
         const dados = await resposta.json();
 
