--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: white;
     }
+
     #splash {
       position: fixed;
       top: 0;
@@ -23,15 +24,18 @@
       z-index: 9999;
       transition: opacity 0.5s ease;
     }
+
     #splash img {
       width: 150px;
       animation: pulse 1.5s infinite;
     }
+
     @keyframes pulse {
       0% { transform: scale(1); opacity: 1; }
       50% { transform: scale(1.05); opacity: 0.9; }
       100% { transform: scale(1); opacity: 1; }
     }
+
     .login-box {
       margin-top: 100px;
       display: flex;
@@ -39,21 +43,47 @@
       align-items: center;
       padding: 20px;
     }
+
     .login-box h2 {
       margin-bottom: 10px;
     }
+
     .login-box input {
       padding: 10px;
-      font-size: 16px;
+      font-size: 24px;
       margin-top: 10px;
-      width: 250px;
+      width: 220px;
+      text-align: center;
+      letter-spacing: 5px;
     }
+
     .login-box button {
       margin-top: 15px;
       padding: 10px 20px;
-      font-size: 16px;
+      font-size: 18px;
       cursor: pointer;
     }
+
+    .numpad {
+      display: grid;
+      grid-template-columns: repeat(3, 70px);
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .numpad button {
+      font-size: 22px;
+      padding: 15px;
+      border: none;
+      background: #eee;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .numpad button:active {
+      background: #ccc;
+    }
+
     .hidden { display: none; }
     header, .container { display: none; }
   </style>
@@ -69,7 +99,21 @@
   <div class="login-box">
     <h2>Bem-vindo, Leonardo Henrique</h2>
     <p>Digite sua senha para continuar:</p>
-    <input type="password" id="senha" placeholder="Senha" onkeydown="if(event.key==='Enter'){verificarSenha()}" />
+    <input type="password" id="senha" placeholder="Senha" readonly />
+    <div class="numpad">
+      <button onclick="addChar('1')">1</button>
+      <button onclick="addChar('2')">2</button>
+      <button onclick="addChar('3')">3</button>
+      <button onclick="addChar('4')">4</button>
+      <button onclick="addChar('5')">5</button>
+      <button onclick="addChar('6')">6</button>
+      <button onclick="addChar('7')">7</button>
+      <button onclick="addChar('8')">8</button>
+      <button onclick="addChar('9')">9</button>
+      <button onclick="clearChar()">←</button>
+      <button onclick="addChar('0')">0</button>
+      <button onclick="verificarSenha()">⏎</button>
+    </div>
     <button onclick="verificarSenha()">Entrar</button>
     <p id="mensagem"></p>
   </div>
@@ -109,7 +153,7 @@
     </a>
   </div>
 
-  <!-- Script splash -->
+  <!-- Scripts -->
   <script>
     window.addEventListener('load', () => {
       const splash = document.getElementById('splash');
@@ -118,17 +162,24 @@
         setTimeout(() => splash.style.display = 'none', 500);
       }, 1000);
     });
-  </script>
 
-  <!-- Script Verifica senha -->
-  <script>
+    function addChar(num) {
+      const input = document.getElementById("senha");
+      input.value += num;
+    }
+
+    function clearChar() {
+      const input = document.getElementById("senha");
+      input.value = input.value.slice(0, -1);
+    }
+
     async function verificarSenha() {
       const senha = document.getElementById("senha").value;
       const mensagem = document.getElementById("mensagem");
       mensagem.textContent = "Verificando...";
 
       try {
-        const resposta = await fetch("https://script.google.com/macros/s/AKfycby1XE-ZSwyyxdLwIcdbr72z1-FNYkFRuv67Sfa5b80r-gjSUe2Pw3yzPzdIegILFvQbeQ/exec?usuario=Leonardo%20Henrique&senha=" + encodeURIComponent(senha));
+        const resposta = await fetch("https://script.google.com/macros/s/AKfycbwSCw0gWjyQ2GDTGyds2YMZ2S3MLbpSAqjGxh8fklaywdrOPGSjgeQz4N1O25omrNhpPQ/exec?usuario=Leonardo%20Henrique&senha=" + encodeURIComponent(senha));
 
         if (!resposta.ok) throw new Error("Erro na requisição");
         const dados = await resposta.json();
@@ -147,6 +198,5 @@
       }
     }
   </script>
-
 </body>
 </html>
