--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <!-- Verifica Senha -->
   <script>
-    const SENHA_CORRETA = atob("MTAyMDQ3"); // senha: 102047
+    const SENHA_CORRETA = atob("MTAyMDQ3");
 
     function verificarSenha() {
       const senha = document.getElementById("senha").value;
