--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Análise Financeira</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
       background-color: white;
+      display: flex;
+      flex-direction: column;
     }
 
     #splash {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       background: white;
       display: flex;
       align-items: center;
@@ -37,11 +41,13 @@
     }
 
     .login-box {
-      margin-top: 100px;
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       padding: 20px;
+      text-align: center;
     }
 
     .login-box h2 {
@@ -49,12 +55,12 @@
     }
 
     .login-box input {
-      padding: 10px;
-      font-size: 24px;
+      padding: 12px;
+      font-size: 26px;
       margin-top: 10px;
       width: 220px;
       text-align: center;
-      letter-spacing: 5px;
+      letter-spacing: 6px;
     }
 
     .login-box button {
@@ -72,7 +78,7 @@
     }
 
     .numpad button {
-      font-size: 22px;
+      font-size: 24px;
       padding: 15px;
       border: none;
       background: #eee;
@@ -85,8 +91,9 @@
     }
 
     header {
-      display: flex;
+      display: none;
       align-items: center;
+      justify-content: center;
       padding: 20px;
       border-bottom: 1px solid #ddd;
     }
@@ -98,17 +105,19 @@
 
     header h1 {
       font-size: 22px;
-      margin: 0 auto;
+      margin: 0;
       font-weight: bold;
     }
 
     .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
+      display: none;
+      flex: 1;
       padding: 30px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
       max-width: 800px;
-      margin: auto;
+      margin: 0 auto;
     }
 
     .card {
@@ -132,22 +141,18 @@
       margin-bottom: 10px;
     }
 
-    .hidden { display: none; }
-
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 18px;
+      .login-box input {
+        font-size: 20px;
       }
     }
-
-    header, .container { display: none; }
   </style>
 </head>
 <body>
 
   <!-- Splash -->
   <div id="splash">
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems" />
   </div>
 
   <!-- Login -->
@@ -177,10 +182,9 @@
   <header>
     <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
     <h1>Análise Financeira</h1>
-    <div class="spacer"></div>
   </header>
 
-  <!-- Cards -->
+  <!-- Menu -->
   <div class="container">
     <a class="card" href="index.resumofinanceiro.html">
       <div class="icon">📈</div>
@@ -215,7 +219,7 @@
     });
   </script>
 
-  <!-- Teclado Numérico -->
+  <!-- Teclado Script -->
   <script>
     function addChar(num) {
       const input = document.getElementById("senha");
@@ -228,7 +232,7 @@
     }
   </script>
 
-  <!-- Verifica Senha -->
+  
   <script>
     const SENHA_CORRETA = atob("MTAyMDQ3");
 
