--- a/index.html
+++ b/index.html
@@ -110,41 +110,46 @@
     }
 
     .container {
-      display: none;
-      flex: 1;
-      padding: 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
+  display: none;
+  flex: 1;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
 
-    .card {
-      background: #f8f8f8;
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      text-decoration: none;
-      color: #333;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease;
-    }
+.card {
+  background: #f8f8f8;
+  border-radius: 14px;
+  padding: 40px 20px;
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  font-size: 22px;
+}
 
-    .card:hover {
-      transform: translateY(-3px);
-      background-color: #eaeaea;
-    }
+.card:hover {
+  transform: scale(1.02);
+  background-color: #eaeaea;
+}
 
-    .icon {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+.icon {
+  font-size: 48px;
+  margin-bottom: 20px;
+}
 
-    @media (max-width: 600px) {
-      .login-box input {
-        font-size: 20px;
-      }
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+
     }
   </style>
 </head>
