--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Análise Financeira</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      height: 100%;
       font-family: 'Segoe UI', sans-serif;
       background-color: white;
-      display: flex;
-      flex-direction: column;
     }
 
     #splash {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       background: white;
       display: flex;
       align-items: center;
@@ -40,188 +36,150 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-    .login-box {
+    header {
+      background-color: white;
+      color: #2c3e50;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .logo-left {
       flex: 1;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      padding: 20px;
+    }
+
+    .logo-left img {
+      height: 40px;
+    }
+
+    .title-center {
+      flex: 2;
       text-align: center;
     }
 
-    .login-box h2 {
-      margin-bottom: 10px;
-    }
-
-    .login-box input {
-      padding: 12px;
-      font-size: 26px;
-      margin-top: 10px;
-      width: 220px;
-      text-align: center;
-      letter-spacing: 6px;
-    }
-
-    .login-box button {
-      margin-top: 15px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    .numpad {
-      display: grid;
-      grid-template-columns: repeat(3, 70px);
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .numpad button {
+    .title-center h1 {
       font-size: 24px;
-      padding: 15px;
-      border: none;
-      background: #eee;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .numpad button:active {
-      background: #ccc;
-    }
-
-    header {
-      display: none;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      border-bottom: 1px solid #ddd;
-    }
-
-    header img {
-      height: 70px;
-      margin-right: 20px;
-    }
-
-    header h1 {
-      font-size: 22px;
       margin: 0;
       font-weight: bold;
     }
 
+    .spacer {
+      flex: 1;
+    }
+
     .container {
-  display: none;
-  flex: 1;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 25px;
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      padding: 30px;
+      max-width: 1200px;
+      margin: auto;
+    }
 
-.card {
-  background: #f8f8f8;
-  border-radius: 14px;
-  padding: 40px 20px;
-  text-align: center;
-  text-decoration: none;
-  color: #333;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-  font-size: 22px;
-}
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+      text-decoration: none;
+      color: inherit;
+    }
 
-.card:hover {
-  transform: scale(1.02);
-  background-color: #eaeaea;
-}
+    .card:hover {
+      transform: translateY(-5px);
+      background-color: #f0f8ff;
+    }
 
-.icon {
-  font-size: 48px;
-  margin-bottom: 20px;
-}
+    .card h2 {
+      margin: 0;
+      font-size: 20px;
+      color: #2c3e50;
+    }
 
-@media (max-width: 768px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-}
+    .icon {
+      font-size: 40px;
+      color: #2980b9;
+      margin-bottom: 10px;
+    }
 
+    @media (max-width: 500px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .logo-left,
+      .spacer {
+        display: none;
+      }
+
+      .title-center {
+        flex: 1;
+      }
+
+      .card h2 {
+        font-size: 18px;
+      }
+
+      .icon {
+        font-size: 32px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Proteção extra para garantir que menu não apareça sem login -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelector("header")?.style.setProperty("display", "none", "important");
-      document.querySelector(".container")?.style.setProperty("display", "none", "important");
-    });
-  </script>
-
   <!-- Splash -->
   <div id="splash">
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems" />
-  </div>
-
-  <!-- Login -->
-  <div class="login-box">
-    <h2>Bem-vindo, Leonardo Henrique</h2>
-    <p>Digite sua senha para continuar:</p>
-    <input type="password" id="senha" placeholder="Senha" readonly />
-    <div class="numpad">
-      <button onclick="addChar('1')">1</button>
-      <button onclick="addChar('2')">2</button>
-      <button onclick="addChar('3')">3</button>
-      <button onclick="addChar('4')">4</button>
-      <button onclick="addChar('5')">5</button>
-      <button onclick="addChar('6')">6</button>
-      <button onclick="addChar('7')">7</button>
-      <button onclick="addChar('8')">8</button>
-      <button onclick="addChar('9')">9</button>
-      <button onclick="clearChar()">←</button>
-      <button onclick="addChar('0')">0</button>
-      <button onclick="verificarSenha()">⏎</button>
-    </div>
-    <button onclick="verificarSenha()">Entrar</button>
-    <p id="mensagem"></p>
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
   </div>
 
   <!-- Cabeçalho -->
   <header>
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
-    <h1>Análise Financeira</h1>
+    <div class="logo-left">
+      <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
+    </div>
+    <div class="title-center">
+      <h1>Análise Financeira</h1>
+    </div>
+    <div class="spacer"></div>
   </header>
 
-  <!-- Menu -->
-  <div class="container">
-    <a class="card" href="index.resumofinanceiro.html">
-      <div class="icon">📈</div>
-      <h2>Resumo Financeiro</h2>
-    </a>
-    <a class="card" href="index.cancelamentos.html">
-      <div class="icon">❌</div>
-      <h2>Cancelamentos</h2>
-    </a>
-    <a class="card" href="index.delivery.html">
-      <div class="icon">🚚</div>
-      <h2>Vendas Delivery</h2>
-    </a>
-    <a class="card" href="index.meta.html">
-      <div class="icon">📊</div>
-      <h2>Meta de Faturamento</h2>
-    </a>
-    <a class="card" href="index.conciliacao.html">
-      <div class="icon">💳</div>
-      <h2>Conciliações</h2>
-    </a>
-  </div>
+  <!-- Cards -->
+  <!-- Cards -->
+<div class="container">
+  <a class="card" href="index.resumofinanceiro.html">
+    <div class="icon">📈</div>
+    <h2>Resumo Financeiro</h2>
+  </a>
 
-  <!-- Splash Script -->
+  <a class="card" href="index.cancelamentos.html">
+    <div class="icon">❌</div>
+    <h2>Cancelamentos</h2>
+  </a>
+
+  <a class="card" href="index.delivery.html">
+    <div class="icon">🚚</div>
+    <h2>Vendas Delivery</h2>
+  </a>
+
+  <a class="card" href="index.meta.html">
+    <div class="icon">📊</div>
+    <h2>Meta de Faturamento</h2>
+  </a>
+
+  <a class="card" href="index.conciliacao.html">
+    <div class="icon">💳</div>
+    <h2>Conciliações</h2>
+  </a>
+</div>
+
+  <!-- Script splash -->
   <script>
     window.addEventListener('load', () => {
       const splash = document.getElementById('splash');
@@ -230,39 +188,6 @@
         setTimeout(() => splash.style.display = 'none', 500);
       }, 1000);
     });
-  </script>
-
-  <!-- Teclado Script -->
-  <script>
-    function addChar(num) {
-      const input = document.getElementById("senha");
-      input.value += num;
-    }
-
-    function clearChar() {
-      const input = document.getElementById("senha");
-      input.value = input.value.slice(0, -1);
-    }
-  </script>
-
- 
-  <script>
-    const SENHA_CORRETA = atob("MTAyMDQ3");
-
-    function verificarSenha() {
-      const senha = document.getElementById("senha").value;
-      const mensagem = document.getElementById("mensagem");
-
-      if (senha === SENHA_CORRETA) {
-        localStorage.setItem("usuarioAutenticado", "Leonardo Henrique");
-        mensagem.textContent = "Acesso autorizado. Bem-vindo!";
-        document.querySelector(".login-box").style.display = "none";
-        document.querySelector("header").style.display = "flex";
-        document.querySelector(".container").style.display = "grid";
-      } else {
-        mensagem.textContent = "Senha incorreta.";
-      }
-    }
   </script>
 
 </body>
